--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ************@gmail.com
-    password: ************
+    username: *********@gmail.com
+    password: *********
     properties:
-      mail_smtp_auth: true
-      mail_smtp_starttls_enable: true
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
